fixed: Aligning FAQ description field

--- a/src/modules/common/components/FaqBlock/FaqBlock.module.scss
+++ b/src/modules/common/components/FaqBlock/FaqBlock.module.scss
@@ -35,7 +35,7 @@
     background-color: transparent;
 
     &__item {
-      margin-bottom: 16px;
+      margin-bottom: 26px;
       background-color: var(--accordion-bg);
       border-radius: 8px;
       min-height: 54px;
@@ -51,11 +51,16 @@
       }
 
       & > div {
+        margin-top: -10px;
         font-size: 16px;
         font-weight: 500;
         line-height: 30px !important;
-        padding-right: 50px !important;
+        padding-right: 10px !important;
         color: var(--four-text-color) !important;
+        @include media-low-mobile {
+          padding-right: 30px !important;
+        }
+
       }
     }
 
